# event-management-ms

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  buf.gen.yaml  docker-compose.yml  setup.py
.sqlx/: query-065d1a5d605778a84794122db2a3101cec0ce8456cddf29126e67684311eec8d.json  query-08997302c65801f7c510917c01e8552c5aa65bbda2374098971fbd4cc03bf981.json  query-22cf5007bf097925522c45b3ef192c45020dfedc414ff78605a026d46134b19d.json  query-28c5106711f0986914c7db1aadb0a7d78738b33334e9d553a6ecf1c4f3f5f0da.json  query-394d55b57102e708b7550fe2fe9b17532f0ebf4dffaf8aeab463049f25369b9f.json  query-547c1849292d19395fbf60bbb4a1119d03d00db06e748511f83a1df3c3285589.json  query-58686a6105ad49e50979a1e90290e725a70c313d36103c424e3521147aca9df5.json  query-6c70e41a040f4b7829456855759bb03cbe964aadbba1f4db0fa1d0f793282eff.json  query-717d7d43c9f86994817b74a5727b558f88ad48dec98d7f6e5f7ddbc023a865e5.json  query-72d535425979d80d804ebd5fde3d6030e8c4ce6a0dd7db1ff9149257a823bd20.json  query-7c6a33dd15764f31c94f506fb8d1ec7fa40b6ea5c9ef59965cc79f5ba55d0aac.json  query-7e46cdea590c1848b0ff31cba68594f981c0323e34f167c00772df019ae3a30d.json  query-814691e3cef4fbce67b855a9c43b4f32abe69c01862921d795cc3c5adceace44.json  query-b7363d0e735e1191f88c2f1954873a89fe8110544fc6969125992d51bfa1eda9.json  query-bce29adb96023c42b0f1925920fad234818d2fe1382d87a1f7dcf89cf45fac0c.json  query-e4f4d5c670181c960ee720f528d9782ab5cb44f78d16aa1cacdc4bdb490e084f.json
deployments/scripts/: entrypoint.sh
migrations/: 20240614122543_create_event.sql  20240614122543_create_events.sql  20240614122546_create_event_slot.sql  20240614122546_create_event_slots.sql  20240614122547_create_booking.sql  20240614122547_create_bookings.sql  20240614122548_create_closure.sql  20240614122548_create_closures.sql  20240614122549_add_indexers.sql  20240614122550_add_event_constaints.sql  20240614122551_add_slot_constaints.sql  20240614122552_add_booking_constaints.sql  20240614122553_add_closure_constaints.sql
migrations/2024-05-03-140105_create_event/: down.sql  up.sql
migrations/2024-05-06-095131_add_event_slots/: down.sql  up.sql
migrations/2024-05-06-095346_add_bookings/: up.sql
migrations/2024-05-06-112239_add_closing_exceptions/: down.sql  up.sql
migrations/2024-05-06-112239_add_closures/: down.sql  up.sql
scripts/: imports.sh
src/: config.rs  lib.rs  main.rs  schema.rs
src/database/: mod.rs  pg_database.rs  redis.rs
src/errors/: errors.rs  mod.rs  validation_errors.rs
src/models/: booking.rs  closing_exception.rs  closure.rs  event.rs  event_instances.rs  filters.rs  mod.rs  slot.rs  timeline.rs  types.rs
src/rpcs/: booking.rs  closing_exception.rs  closure.rs  event.rs  mod.rs  timeline.rs
src/server/: mod.rs  server.rs
src/services/: booking.rs  mod.rs
src/tests/: mod.rs
src/utils/: filter.rs  filters.rs  mod.rs  request_wrapper.rs
src/validations/: mod.rs  validate_booking.rs  validate_closing_exception.rs  validate_closure.rs  validate_echo.rs  validate_event.rs  validate_filters.rs  validate_timeline.rs
tests/: fixtures.rs  mod.rs
tests/rpcs/: booking.rs  closure.rs  event.rs  mod.rs
(+41 files in other folders)
