[package]
name = "poc-booking-ms"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
base32 = "0.4.0"
diesel = { version = "2.1.6", features = ["postgres_backend", "postgres", "r2d2", "chrono", "uuid", "serde_json"] }
env_logger = "0.11.3"
log = "0.4.21"
protos = { path = "./gen" }
rand = "0.8.5"
redis = "0.25.3"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
tonic = { version = "0.10.2", features = ["tls"] }
uuid = "1.8.0"
serde = { version = "1.0.198", features = ["derive"] }
autometrics = { version = "1.0.1", features = ["prometheus-exporter"] }
dotenvy = "0.15.7"
prost = "0.12.4"
tonic-reflection = "0.10.2"
yaml-rust = "0.4.5"
futures-util = "0.3.30"
diesel_migrations = "2.1.0"
chrono = "0.4.38"
serde_json = "1.0.116"
time = { version = "0.3.36", features = ["parsing"] }
chrono-tz = "0.9.0"
rrule = "0.12.0"
validator = "0.18.1"

[workspace]
members = [
    "gen"
]
