[package]
name = "event-ms"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
env_logger = "0.11.3"
log = "0.4.21"
protos = { path = "libs/gen" }
redis = "0.25.3"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
tonic = { version = "0.11.0", features = ["tls"] }
uuid = "1.8.0"
serde = { version = "1.0.198", features = ["derive"] }
autometrics = { version = "1.0.1", features = ["prometheus-exporter"] }
dotenvy = "0.15.7"
prost = "0.12.4"
tonic-reflection = "0.11.0"
yaml-rust = "0.4.5"
futures-util = "0.3.30"
chrono = "0.4.38"
serde_json = "1.0.116"
time = { version = "0.3.36", features = ["parsing"] }
chrono-tz = "0.9.0"
rrule = "0.12.0"
validator = "0.18.1"
thiserror = "1.0.59"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono"] }
async-trait = "0.1.80"
num-derive = "0.4.2"
num-traits = "0.2.19"

[workspace]
members = [
    "libs/gen"
]
